	libfreeipmi/include/freeipmi/debug/ipmi-debug.h
	(ipmi_dump_lan_packet_ipmb, ipmi_dump_rmcpplus_packet_ipmb): New
	functions.

	* libfreeipmi/src/api/ipmi-lan-session-common.c: Support ipmb
	dumping.  Support ipmb receiving.

	* ipmi-sensors/: Support ipmb bridging.  Support --bridge-sensors
	option.  Change default privilege to operator.  Output "Unknown
	State" if an unrecognized bit is set.

	* ipmimonitoring/: Output "Unknown State" if an unrecognized bit is set.

	Various code cleanup and minor enhancements.

	* libfreeipmi/src/api/: Create and support new error message
	IPMI_ERR_COMMAND_INVALID_FOR_SELECTED_INTERFACE.
	
2008-08-18 Albert Chu <chu11@llnl.gov>

	* libfreeipmi/include/freeipmi/ipmi-ipmb-interface.h,
	libfreeipmi/src/interface/ipmi-ipmb-interface.c: New files.

	* libfreeipmi/include/freeipmi/freeipmi.h: Update for new .h file.

	* Update Makefiles as needed for new files.
	
2008-08-15 Albert Chu <chu11@llnl.gov>

	* libfreeipmi/: Support various new ipmi cmds from messaging
	support section.
	
2008-08-15 Albert Chu <chu11@llnl.gov>

	* libfreeipmi/: Support get system interface capabilities and get
	bt interface capabilities commands, templates, and api calls.

	* bmc-device/: Support --get-ssif-interface-capabilities,
	--get-kcs-interface-capabilities, --get-bt-interface-capabilities.
	
2008-08-15 Albert Chu <chu11@llnl.gov>

	* ipmimonitoring/src/libipmimonitoring/ipmi_monitoring_sensor_reading.c
	(_get_sensor_reading): If sensor slave address is not BMC,
	considering sensor unavailable.

	* libfreeipmi/include/freeipmi/sdr-cache/ipmi-sdr-cache.h,
	libfreeipmi/src/sdr-cache/ipmi-sdr-cache-read.c
	(ipmi_sdr_cache_search_sensor_number): Rename to
	ipmi_sdr_cache_search_sensor.  Search for sensor via sensor owner
	id and sensor number.

	* ipmi-sel/src/ipmi-sel-entry.c (_find_sdr_record,
	_get_sel_system_event_record): Find sensor via sensor number and
	id.

	* libfreeipmi/include/freeipmi/spec/ipmi-slave-address-spec.h: